# gemm-perf

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.ABAAD653B13DAB41.idx
include/: gemma.hpp
source/: CMakeLists.txt  main.cpp
