cmake_minimum_required(VERSION 3.16)
project(arm-gemm-bench CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(NVIDIA False)
set(ROCM False)

if(CMAKE_CXX_COMPILER MATCHES "nvcc")
    set(NVIDIA True)
endif()
if(CMAKE_CXX_COMPILER MATCHES "hipcc")
    set(ROCM True)
endif()

if(APPLE)
    set(CMAKE_CXX_FLAGS "-O3 -march=native")
    set(CMAKE_EXE_LINKER_FLAGS "-framework Accelerate")
elseif(NVIDIA)
    set(CMAKE_CXX_FLAGS "-O3 -arch=sm_61 -forward-unknown-to-host-compiler -march=native")
else()
    set(CMAKE_CXX_FLAGS "-O2 -march=native")
endif()

if(APPLE)
    include_directories(/opt/homebrew/opt/openblas/include)
    link_directories(/opt/homebrew/opt/openblas/lib)
endif()

include_directories(${PROJECT_SOURCE_DIR}/include)
add_subdirectory(source)
